samples/_failures_safe/1761507798_170706_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac844231.c: In function ‘main’:
./samples/SAFE/__tmp_ac844231.c:147:5: error: expected expression at end of input
  147 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_ac844231.c:147:5: error: expected declaration or statement at end of input
